# stowarr

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.web  NOTICE  README.md  SECURITY.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
config/: config.example.json
docker/: entrypoint.sh  nginx.conf.template
src/stowarr/: archive.py  auth.py  cli.py  clients.py  config.py  engine.py  http.py  queue.py  server.py  store.py
src/stowarr/web/: app.css  app.js  cohesion.css  index.html  routing.css
tests/: test_archive.py  test_auth.py  test_clients.py  test_config.py  test_engine.py  test_queue.py  test_server.py  test_store.py
